# Arkanoid

./: CMakeLists.txt  index.html  linkTest.html  main.cpp
Code/CPP/: ArcanoidGameDrawer.cpp  ArcanoidGameEngine.cpp  ArcanoidGameManager.cpp  ArkanoidDrawer.cpp  ArkanoidEngine.cpp  ArkanoidGameController.cpp  AssetsManager.cpp  Button.cpp  Definitions.cpp  Drawer.cpp  EntireGameWonState.cpp  GameObject.cpp  GamingState.cpp  GeometryConstants.cpp  Level.cpp  LevelEndSatate.cpp  Line.cpp  MainMenuState.cpp  MenuDrawer.cpp  PausedState.cpp  Point.cpp  Rect.cpp  ResourceManager.cpp  StateMachine.cpp  StaticImageState.cpp  Timer.cpp  Vector.cpp  utility_functions.cpp
Code/H/: ArcanoidGameDrawer.h  ArcanoidGameEngine.h  ArcanoidGameManager.h  ArkanoidDrawer.h  ArkanoidEngine.h  ArkanoidGameController.h  AssetsManager.h  Definitions.h  GameData.h  GameState.h  ResourceManager.h  StateMachine.h  Timer.h
Code/H/Definitions/: CommonDefinitions.h  DrawerDefinitions.h  ModelDefinitions.h
Code/H/GameStates/: AllStates.h  EntireGameWonState.h  GamingState.h  LevelEndState.h  MainMenuState.h  PausedState.h  State.h  StaticImageState.h
Code/H/Geometry/: Geometry.h  Line.h  Point.h  Rect.h  Size.h  Vector.h
Code/H/Interfaces/: ArcanoidGameDrawerDelegate.h  ArcanoidGameEngineDelegate.h  ArkanoidEngineDelegate.h  Drawer.h  GameEngineDelegate.h  GameObjectDelegate.h  StateDelegate.h
Code/H/Models/: AllGameObjects.h  Ball.h  Border.h  Brick.h  Level.h  Paddle.h
Code/H/Models/Interfaces/: Attacker.h  GameObject.h  Mortal.h  Movable.h
Code/H/UI/Drawers/: GameSceneDrawer.h  MenuDrawer.h  PopUpDrawer.h
Code/H/UI/UIElements/: Button.h
Resources/LevelSpecs/: 1  1.lvl  2  2.lvl  3  4  5  5.lvl  6
Resources/Textures/: default  game_scene_bg  main_menu_bg  popup_bg
Resources/Textures/Balls/: 1
Resources/Textures/Bricks/: 2  5
Resources/Textures/Paddles/: 1
Resources/Textures/ResolutionMedium/: game_scene_bg
Resources/Textures/ResolutionMedium/Balls/: 1  3  4  5
Resources/Textures/ResolutionMedium/Borders/: 1  2
Resources/Textures/ResolutionMedium/Bricks/: 1  2  3  4  5
Resources/Textures/ResolutionMedium/Levels/: 1
Resources/Textures/ResolutionMedium/Paddles/: 1  2
